--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js",
-    "start": "nodemon index.js"
+    "dev": "node src/index.js",
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "NCS",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "ejs-mate": "^3.0.0",
     "express": "^4.17.3",
+    "firebase-admin": "^10.0.2",
     "moment": "^2.29.1",
     "nodemon": "^2.0.15"
   }
