--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
     "moment": "^2.29.1",
+    "mongoose": "^5.12.0",
     "nodemon": "^2.0.15"
   }
 }
